--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
-set-option -g prefix C-a
+set-option -g prefix C-z
 bind-key C-a send-prefix
 
 # Smart pane switching with awareness of Vim splits.
