alacritty and new tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,3 +32,7 @@ set-option -g escape-time 10
 set -as terminal-features ",xterm-256color:RGB"
 
 bind-key K kill-session
+
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
