--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,3 +36,5 @@ bind-key K kill-session
 set -g allow-passthrough on
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
+
+bind-key -r f run-shell "tmux neww tmux-sessionizer.sh"
