--- a/roles/lazygit/tasks/main.yaml
+++ b/roles/lazygit/tasks/main.yaml
@@ -1,28 +1,34 @@
-- name: Get latest yazi release info
+- name: Get latest lazygit release info
   uri:
-    url: https://api.github.com/repos/aaronbieber/yazi/releases/latest
+    url: https://api.github.com/repos/jesseduffield/lazygit/releases/latest
     return_content: yes
-  register: yazi_release
+  register: lazygit_release
 
-- name: Set yazi download URL (linux amd64 tar.gz)
+- name: Set lazygit download URL (linux amd64 tarball)
   set_fact:
-    yazi_url: "{{ yazi_release.json.assets | selectattr('name', 'match', 'yazi_.*_linux_amd64.tar.gz') | map(attribute='browser_download_url') | list | first }}"
+    lazygit_url: "{{ lazygit_release.json.assets | selectattr('name', 'match', 'lazygit_.*_Linux_x86_64.tar.gz') | map(attribute='browser_download_url') | list | first }}"
 
-- name: Download yazi archive
+- name: Download lazygit archive
   get_url:
-    url: "{{ yazi_url }}"
-    dest: /tmp/yazi.tar.gz
+    url: "{{ lazygit_url }}"
+    dest: /tmp/lazygit.tar.gz
     mode: '0644'
 
-- name: Extract yazi binary
+- name: Ensure /tmp/lazygit directory exists
+  ansible.builtin.file:
+    path: /tmp/lazygit
+    state: directory
+    mode: '0755'
+
+- name: Extract lazygit binary
   ansible.builtin.unarchive:
-    src: /tmp/yazi.tar.gz
-    dest: /tmp/yazi
+    src: /tmp/lazygit.tar.gz
+    dest: /tmp/lazygit
     remote_src: yes
     extra_opts: [--strip-components=1]
 
-- name: Move yazi binary to /usr/local/bin
+- name: Move lazygit binary to /usr/local/bin
   ansible.builtin.copy:
-    src: /tmp/yazi/yazi
-    dest: /usr/local/bin/yazi
+    src: /tmp/lazygit
+    dest: /usr/local/bin/lazygit
     mode: '0755'
