--- a/roles/regolith/tasks/main.yaml
+++ b/roles/regolith/tasks/main.yaml
@@ -2,6 +2,7 @@
   ansible.builtin.apt_key:
     url: https://archive.regolith-desktop.com/regolith.key
     keyring: /usr/share/keyrings/regolith-archive-keyring.gpg
+  become: true
 
 - name: Add Regolith stable repo for Ubuntu 24.04 (Noble)
   ansible.builtin.apt_repository:
@@ -9,10 +10,12 @@
       deb [arch=amd64 signed-by=/usr/share/keyrings/regolith-archive-keyring.gpg]
       https://archive.regolith-desktop.com/ubuntu/stable noble v3.3
     filename: regolith
+  become: true
 
 - name: Update apt cache
   ansible.builtin.apt:
     update_cache: yes
+  become: true
 
 - name: Install Regolith desktop + session + look
   ansible.builtin.apt:
@@ -21,3 +24,4 @@
       - regolith-session-flashback
       - regolith-look-lascaille
     state: present
+  become: true
