--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-z
-bind-key C-a send-prefix
+bind-key C-z send-prefix
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -37,4 +37,6 @@ set -g allow-passthrough on
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
 
-bind-key -r f run-shell "tmux neww tmux-sessionizer.sh"
+bind-key -r f run-shell "tmux neww tmux_sessionizer.sh"
+bind-key -r p run-shell "tmux neww project.sh"
+bind-key -r g run-shell "tmux neww find.sh"
