--- a/roles/alacritty/tasks/main.yaml
+++ b/roles/alacritty/tasks/main.yaml
@@ -12,6 +12,7 @@
       - curl
       - git
     state: present
+  become: true
 
 - name: Clone Alacritty repo to user cache dir
   ansible.builtin.git:
@@ -26,6 +27,8 @@
     cmd: cargo build --release
     chdir: "{{ ansible_env.HOME }}/.cache/alacritty"
   become: false
+  environment:
+    PATH: "{{ ansible_env.HOME }}/.cargo/bin:{{ ansible_env.PATH }}"
 
 - name: Copy Alacritty binary to /usr/local/bin
   ansible.builtin.copy:
