--- a/roles/nodejs/tasks/main.yaml
+++ b/roles/nodejs/tasks/main.yaml
@@ -4,6 +4,7 @@
       - curl
       - gnupg
     state: present
+  become: true
 
 - name: Download NodeSource setup script
   ansible.builtin.get_url:
