--- a/roles/nvim/tasks/main.yaml
+++ b/roles/nvim/tasks/main.yaml
@@ -25,10 +25,12 @@
       export EDITOR=/usr/local/bin/nvim
       export VISUAL=/usr/local/bin/nvim
     mode: '0644'
+  become: true
 
 - name: Set Neovim as Git editor for user
   ansible.builtin.git_config:
     name: core.editor
     scope: global
     value: /usr/local/bin/nvim
+  become: true
 
