--- a/roles/yazi/tasks/main.yaml
+++ b/roles/yazi/tasks/main.yaml
@@ -19,13 +19,15 @@
     chdir: "{{ ansible_env.HOME }}/.cache/yazi"
   args:
     creates: "{{ ansible_env.HOME }}/.cache/yazi/target/release/yazi"
+  environment:
+    PATH: "{{ ansible_env.HOME }}/.cargo/bin:{{ ansible_env.PATH }}"
 
 - name: Move yazi binary to /usr/local/bin
   ansible.builtin.command:
     cmd: mv target/release/yazi /usr/local/bin/yazi
     chdir: "{{ ansible_env.HOME }}/.cache/yazi"
   args:
-    removes: /usr/local/bin/yazi
+    creates: /usr/local/bin/yazi
   become: yes
 
 - name: Move ya binary to /usr/local/bin
@@ -33,6 +35,6 @@
     cmd: mv target/release/ya /usr/local/bin/ya
     chdir: "{{ ansible_env.HOME }}/.cache/yazi"
   args:
-    removes: /usr/local/bin/ya
+    creates: /usr/local/bin/ya
   become: yes
 
