--- a/playbook.yaml
+++ b/playbook.yaml
@@ -3,6 +3,8 @@
   vars:
     user: wolf
     chezmoi_repo: "git@github.com:wulfdewolf/dotfiles.git"
+    git_user_name: "wulfdewolf"
+    git_user_email: "wolf2wulf@gmail.com"
   roles:
     #- regolith
     #- apps
@@ -14,3 +16,10 @@
     #- python_tools
     #- nvim
     - chezmoi
+    - name: Set global Git username
+      ansible.builtin.command:
+        cmd: git config --global user.name "{{ git_user_name }}"
+
+    - name: Set global Git email
+      ansible.builtin.command:
+        cmd: git config --global user.email "{{ git_user_email }}"
