regolith-look + projects folder

--- a/roles/regolith/tasks/main.yaml
+++ b/roles/regolith/tasks/main.yaml
@@ -21,7 +21,7 @@
   ansible.builtin.apt:
     name:
       - regolith-desktop
-      - regolith-session-flashback
-      - regolith-look-lascaille
+      - regolith-session-sway
+      - regolith-look-blackhole
     state: present
   become: true
