--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -24,7 +24,7 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 
 # Start dmenu/wofi
-bindsym $mod+d exec wofi --show drun
+bindsym $mod+space exec wofi --show drun
 
 # Change focus
 bindsym $mod+h focus left
