--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -179,4 +179,11 @@ exec --no-startup-id xautolock -time 10 -locker "i3lock -c 000000"
 exec_always --no-startup-id setxkbmap -layout gb
 exec_always --no-startup-id picom --experimental-backends
 
+# Screenshots
 bindsym Print exec flameshot gui
+
+# Numlock enabled
+exec_always --no-startup-id numlockx on
+
+# Touchpad tapping enabled
+exec_always --no-startup-id xinput set-prop 11 "libinput Tapping Enabled" 1
