--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -63,7 +63,7 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+#bindsym $mod+Shift+space floating toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
@@ -176,7 +176,7 @@ bindsym $mod+b exec --no-startup-id sh -c 'i3-msg workspace 2 && brave-browser'
 bindsym $mod+Shift+x exec i3lock -c 000000
 exec --no-startup-id xautolock -time 10 -locker "i3lock -c 000000"
 
-exec_always --no-startup-id setxkbmap -layout gb
+exec_always --no-startup-id sh -c 'sleep 1 && setxkbmap -layout gb'
 exec_always --no-startup-id picom --experimental-backends
 
 # Screenshots
@@ -186,4 +186,5 @@ bindsym Print exec flameshot gui
 exec_always --no-startup-id numlockx on
 
 # Touchpad tapping enabled
-exec_always --no-startup-id xinput set-prop 11 "libinput Tapping Enabled" 1
+# exec_always --no-startup-id xinput set-prop 11 "libinput Tapping Enabled" 1
+focus_follows_mouse yes
