--- a/roles/apps/tasks/main.yaml
+++ b/roles/apps/tasks/main.yaml
@@ -27,7 +27,25 @@
       - fzf
       - luarocks
       - numlockx
+      - i3
+      - i3lock
+      - xautolock
       - flameshot 
+      - xss-lock
+      - x11-server-utils
+      - x11-utils
+      - xrandr
+      - setxkbmap
+      - xset
+      - dex
+      - picom
+      - feh
+      - network-manager
+      - network-manager-gnome
+      - nm-tray
+      - pulseaudio
+      - pavucontrol
+      - rofi
     state: present
   become: true
 
