--- a/roles/apps/tasks/main.yaml
+++ b/roles/apps/tasks/main.yaml
@@ -17,7 +17,7 @@
       - flameshot 
       - xss-lock
       - x11-utils
-      - setxkbmap
+      - setxbkmap
       - xset
       - dex
       - picom
