--- a/roles/alacritty/tasks/main.yaml
+++ b/roles/alacritty/tasks/main.yaml
@@ -56,5 +56,5 @@
 
 - name: Set alacritty as default x-terminal-emulator
   ansible.builtin.command:
-    cmd: update-alternatives --set x-terminal-emulator /usr/bin/alacritty
+    cmd: update-alternatives --set x-terminal-emulator /usr/local/bin/alacritty
   become: yes
