--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -37,6 +37,6 @@ set -g allow-passthrough on
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
 
-bind-key -r f run-shell "tmux neww tmux_sessionizer.sh"
+bind-key -r g run-shell "tmux neww tmux_sessionizer.sh"
 bind-key -r p run-shell "tmux neww project.sh"
-bind-key -r g run-shell "tmux neww find.sh"
+bind-key -r f run-shell "tmux neww find.sh"
