--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -16,9 +16,10 @@ exec --no-startup-id xautolock -time 10 -locker "i3lock"
 
 # bar
 bar {
-    status_command i3status
+    status_command i3status-rs
     position top
 }
+
 
 # screenshots
 bindsym Print exec flameshot gui
