--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -1,5 +1,7 @@
 set $mod Mod4
 
+client.focused #89b4fa #89b4fa #1e1e2e #cdd6f4 #89b4fa
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:JetBrainsMono Nerd Font 12
@@ -18,6 +20,11 @@ exec --no-startup-id xautolock -time 10 -locker "i3lock"
 bar {
     status_command i3status-rs
     position top
+    colors {
+        focused_workspace  #89b4fa #89b4fa #1e1e2e
+        active_workspace   #45475a #45475a #cdd6f4
+        inactive_workspace #313244 #313244 #a6adc8
+    }
 }
 
 
